@@ -6,7 +6,9 @@ Revision history for Perl module TestRail::API
     - Update getRunSummary and getPlanSummary to use 'labels' rather than system names
     - Add TestRail::API::statusNamesToLabels to ease interaction with above method updates
     - Change TestRail::API::translateConfigNamesToIds to accept ARRAY arguments
-    - make above function and TestRail::API::sectionNamesToIds return values in correct order
+    - Make above function and TestRail::API::sectionNamesToIds return values in correct order
+    - Change the 'spawn' option in Test::Rail::Parser (and it's callers) to be --testsuite_id
+    - Add a --testsuite (name) option to Test::Rail::Parser
 
 0.030 2015-07-31 TEODESIAN
     - Fix testrail-tests, was calling function in incorrect namespace
